# paper-hunter

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
apps/api/: index.py  requirements.txt  vercel.json
apps/api/paper_hunter/: __init__.py  api.py  figure_forensics.py  knowledge_bases.py  models.py  orchestrator.py  pdf_parser.py  reporting.py  synthetic_sample.py  text_signals.py  wording.py
apps/api/tests/: test_api.py  test_figure_forensics.py  test_models_and_wording.py  test_pipeline.py  test_synthetic_sample.py  test_text_signals.py
apps/web/: next.config.mjs  package.json  tsconfig.check.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts
docs/architecture/: overview.md
docs/demo/: demo-script.md
docs/superpowers/plans/: 2026-05-31-paper-hunter.md
docs/superpowers/specs/: 2026-05-31-paper-hunter-design.md
scripts/: dev.sh  generate_synthetic_sample.py  start-container.sh
