[project]
name = "paper-hunter"
version = "0.1.0"
description = "Research-integrity evidence discovery hackathon MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pillow>=10.4.0",
  "pydantic>=2.8.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
